Getting json, hopefully.

--- a/site/public/index.html
+++ b/site/public/index.html
@@ -30,19 +30,8 @@
       }
 
       function makeMarkers() {
-        $.ajax({
-          url: 'http://punadv.herokuapp.com/notes.json',
-          type: 'GET',
-          dataType: 'text',
-        })
-        .done(function() {
-          console.log("success");
-        })
-        .fail(function() {
-          console.log("error");
-        })
-        .always(function() {
-          console.log("complete");
+        $.getJSON("punadv.herokuapp.com/notes.json", function(data) {
+          console.log(data);
         });
       }
 
