--- a/site/public/index.html
+++ b/site/public/index.html
@@ -30,7 +30,7 @@
       }
 
       function makeMarkers() {
-        $.getJSON("punadv.herokuapp.com/notes.json", function(data) {
+        $.getJSON("http://punadv.herokuapp.com/notes.json", function(data) {
           console.log(data);
         });
       }
