--- a/site/public/index.html
+++ b/site/public/index.html
@@ -30,6 +30,8 @@
               '<div id="siteNotice">'+
               '</div>'+
               '<h1 id="firstHeading" class="firstHeading">' + note.title + '</h1>'+
+              '<h2>' + note.sender + '</h2>'+
+              '<h2>' + note.recipient + '</h2>'+
               '<div id="bodyContent">'+
                 '<p>' + note.note + '</p>'+
               '</div>'+
