--- a/site/public/index.html
+++ b/site/public/index.html
@@ -7,6 +7,9 @@
       html { height: 100% }
       body { height: 100%; margin: 0; padding: 0 }
       #map-canvas { height: 100% }
+      h2.names {
+        margin: 0;
+      }
     </style>
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBetWit_oBeGVWVCTCflsH0QytUwoDg-i8&sensor=false">
     </script>
@@ -30,8 +33,8 @@
               '<div id="siteNotice">'+
               '</div>'+
               '<h1 id="firstHeading" class="firstHeading">' + note.title + '</h1>'+
-              '<h2>From: ' + note.sender + '</h2>'+
-              '<h2>To: ' + note.recipient + '</h2>'+
+              '<h2 class="names">From: ' + note.sender + '</h2>'+
+              '<h2 class="names">To: ' + note.recipient + '</h2>'+
               '<div id="bodyContent">'+
                 '<p>' + note.note + '</p>'+
               '</div>'+
