--- a/site/public/index.html
+++ b/site/public/index.html
@@ -10,6 +10,9 @@
       h2.names {
         margin: 0;
       }
+      h1.firstHeading {
+        margin: 5px;
+      }
     </style>
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBetWit_oBeGVWVCTCflsH0QytUwoDg-i8&sensor=false">
     </script>
