--- a/site/public/index.html
+++ b/site/public/index.html
@@ -11,7 +11,8 @@
         margin: 0;
       }
       h1.firstHeading {
-        margin: 5px;
+        margin-top: 5px;
+        margin-bottom: 5px;
       }
     </style>
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBetWit_oBeGVWVCTCflsH0QytUwoDg-i8&sensor=false">
