--- a/site/public/index.html
+++ b/site/public/index.html
@@ -45,7 +45,7 @@
               '<h2 class="names">From: ' + note.sender + '</h2>'+
               '<h2 class="names">To: ' + note.recipient + '</h2>'+
               '<div id="bodyContent">'+
-                '<p>' + note.note + '</p>'+
+                '<p>' + note.note + '</p>'+ audio +
               '</div>'+
               '</div>';
 
