--- a/site/public/index.html
+++ b/site/public/index.html
@@ -6,13 +6,17 @@
     <style type="text/css">
       html { height: 100% }
       body { height: 100%; margin: 0; padding: 0 }
-      #map-canvas { height: 100% }
+      #map-canvas { height: 90% }
       h2.names {
         margin: 0;
       }
       h1.firstHeading {
         margin-top: 5px;
         margin-bottom: 5px;
+      }
+      #nav {
+        height: 10%;
+        background-color: black;
       }
     </style>
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBetWit_oBeGVWVCTCflsH0QytUwoDg-i8&sensor=false">
@@ -74,5 +78,7 @@
   </head>
   <body>
     <div id="map-canvas"></div>
+    <div id="nav">
+    </div>
   </body>
 </html>
