--- a/site/public/index.html
+++ b/site/public/index.html
@@ -17,6 +17,7 @@
       #nav {
         height: 10%;
         background-color: black;
+        color: white;
       }
     </style>
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBetWit_oBeGVWVCTCflsH0QytUwoDg-i8&sensor=false">
@@ -79,6 +80,7 @@
   <body>
     <div id="map-canvas"></div>
     <div id="nav">
+      <h1>Adventure!</h1>
     </div>
   </body>
 </html>
