--- a/site/public/index.html
+++ b/site/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
     <title>Adventure!</title>
+    <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.4.2/pure-min.css">
     <style type="text/css">
       html { height: 100% }
       body { height: 100%; margin: 0; padding: 0 }
@@ -82,7 +83,7 @@
   <body>
     <div id="map-canvas"></div>
     <div id="nav">
-      <a href="add">Add Pin</a>
+      <a class="pure-button" href="add">Add Pin</a>
     </div>
   </body>
 </html>
