Moving teh buttonz

--- a/site/public/index.html
+++ b/site/public/index.html
@@ -20,6 +20,12 @@
         background-color: black;
         color: white;
       }
+
+      #addBtn {
+        display:inline-block;
+        vertical-align:middle;
+        margin-left: 20px;
+      }
     </style>
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBetWit_oBeGVWVCTCflsH0QytUwoDg-i8&sensor=false">
     </script>
@@ -83,7 +89,7 @@
   <body>
     <div id="map-canvas"></div>
     <div id="nav">
-      <a class="pure-button" href="add">Add Pin</a>
+      <a id="addBtn" class="pure-button" href="add">Add Pin</a>
     </div>
   </body>
 </html>
