--- a/site/public/index.html
+++ b/site/public/index.html
@@ -30,8 +30,6 @@
     </script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script type="text/javascript">
-      var newMarker = null;
-
       function initialize() {
         var mapOptions = {
           center: new google.maps.LatLng(33.775626, -84.396266),
@@ -94,7 +92,7 @@
   <body>
     <div id="map-canvas"></div>
     <div id="nav">
-      <a id="addBtn" class="pure-button" href="add">Add Pin</a>
+      <a id="addBtn" class="pure-button" href="add.html">Add Note</a>
     </div>
   </body>
 </html>
