--- a/site/public/add.html
+++ b/site/public/add.html
@@ -7,7 +7,7 @@
     <style type="text/css">
       html { height: 100% }
       body { height: 100%; margin: 0; padding: 0 }
-      #map-canvas { height: 90% }
+      #map-canvas { height: 80% }
       h2.names {
         margin: 0;
       }
@@ -16,8 +16,12 @@
         margin-bottom: 5px;
       }
       #nav {
-        height: 10%;
+        height: 20%;
         background-color: black;
+        color: white;
+        padding-left: 10px;
+      }
+      legend {
         color: white;
       }
     </style>
