--- a/site/public/add.html
+++ b/site/public/add.html
@@ -17,19 +17,15 @@
       }
       #nav {
         height: 20%;
-        background-color: black;
-        color: white;
         padding-left: 10px;
       }
-      legend {
-        color: white;
-      }
+
     </style>
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBetWit_oBeGVWVCTCflsH0QytUwoDg-i8&sensor=false">
     </script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script type="text/javascript">
-      var newMarker = null;
+      var marker = null;
 
       function initialize() {
         var mapOptions = {
