--- a/site/public/add.html
+++ b/site/public/add.html
@@ -18,6 +18,7 @@
       #nav {
         height: 20%;
         padding-left: 10px;
+        padding-top: 10px;
       }
 
     </style>
@@ -52,7 +53,7 @@
     <div id="nav">
       <form class="pure-form">
         <fieldset>
-          <legend>Add a new note.</legend>
+          <legend>Add a new note! Click on the map to select the location.</legend>
 
           <input type="text" placeholder="Title"/>
           <input type="text" placeholder="Note"/>
