--- a/site/public/add.html
+++ b/site/public/add.html
@@ -49,6 +49,7 @@
 
       $("#newNote").submit(function(event) {
         event.preventDefault();
+        alert(Testing);
         var tit = $("#tit").val();
         var msg = $("#msg").val();
         var nme = $("#nme").val();
