--- a/site/public/add.html
+++ b/site/public/add.html
@@ -50,7 +50,6 @@
       $( document ).ready(function() {
         $("#newNote").submit(function(event) {
           event.preventDefault();
-          alert("Testing");
           var tit = $("#tit").val();
           var msg = $("#msg").val();
           var nme = $("#nme").val();
@@ -59,6 +58,7 @@
           var lon = $("#lon").val();
 
           $.post( "http://punadv.herokuapp.com/notesapp", { title: tit, note: msg, audio_path: "", latitude: parseFloat(lat), longitude: parseFloat(lon), sender: nme, recipient: "", visible_range: parseInt(rng), image_path: ""});
+          window.location.href = 'http://punadv.herokuapp.com/';
         });
       });
     </script>
