--- a/site/public/index.html
+++ b/site/public/index.html
@@ -94,7 +94,7 @@
   <body>
     <div id="map-canvas"></div>
     <div id="nav">
-      <a id="addBtn" class="pure-button" href="add.html">Add Note</a>
+      <a id="addBtn" class="pure-button pure-button-primary" href="add.html">Add Note</a>
     </div>
   </body>
 </html>
