--- a/site/public/index.html
+++ b/site/public/index.html
@@ -18,6 +18,8 @@
       #nav {
         position: absolute;
         bottom: 10px;
+        width: 100px;
+        left: 10px;
       }
     </style>
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBetWit_oBeGVWVCTCflsH0QytUwoDg-i8&sensor=false">
