--- a/site/public/index.html
+++ b/site/public/index.html
@@ -18,8 +18,13 @@
       #nav {
         position: absolute;
         bottom: 10px;
-        width: 100px;
+        width: 150px;
         left: 10px;
+      }
+
+      #nav ul li {
+        background-color: #0078E7;
+        color: white;
       }
     </style>
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBetWit_oBeGVWVCTCflsH0QytUwoDg-i8&sensor=false">
