Images and CSS fixes

--- a/site/public/index.html
+++ b/site/public/index.html
@@ -22,9 +22,9 @@
         left: 10px;
       }
 
-      #nav ul li {
-        background-color: #0078E7;
-        color: white;
+      .pure-menu-heading {
+        background-color: #0078E7 !important;
+        color: white !important;
       }
     </style>
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBetWit_oBeGVWVCTCflsH0QytUwoDg-i8&sensor=false">
