--- a/site/public/index.html
+++ b/site/public/index.html
@@ -14,6 +14,7 @@
       h1.firstHeading {
         margin-top: 5px;
         margin-bottom: 5px;
+        width: 400px;
       }
       #nav {
         position: absolute;
