--- a/site/public/index.html
+++ b/site/public/index.html
@@ -55,7 +55,7 @@
             }
 
             if (note.image_path != "" && note.image_path != null) {
-              pic = "<img src='" + note.image_path + "' ></img>";
+              pic = "<img src='" + note.image_path + "' height='200'></img>";
             }
 
             if (note.recipient != "") {
