--- a/site/public/add.html
+++ b/site/public/add.html
@@ -7,7 +7,7 @@
     <style type="text/css">
       html { height: 100% }
       body { height: 100%; margin: 0; padding: 0 }
-      #map-canvas { height: 85% }
+      #map-canvas { height: 100% }
       h2.names {
         margin: 0;
       }
@@ -16,9 +16,10 @@
         margin-bottom: 5px;
       }
       #nav {
+        position: absolute;
         height: 15%;
-        padding-left: 10px;
-        padding-top: 10px;
+        left: 10px;
+        bottom: 10px;
       }
 
     </style>
