--- a/site/public/add.html
+++ b/site/public/add.html
@@ -20,6 +20,7 @@
         height: 15%;
         left: 10px;
         bottom: 10px;
+        background: rgba(255, 255, 255, 0.8);
       }
 
     </style>
