--- a/site/public/add.html
+++ b/site/public/add.html
@@ -20,7 +20,12 @@
         height: 15%;
         left: 10px;
         bottom: 10px;
-        background: rgba(255, 255, 255, 0.8);
+        background: rgba(0, 0, 0, 0.4);
+        padding: 0 10px;
+      }
+
+      legend {
+        color: white !important;
       }
 
     </style>
