--- a/site/public/add.html
+++ b/site/public/add.html
@@ -17,7 +17,7 @@
       }
       #nav {
         position: absolute;
-        height: 15%;
+        height: 85px;
         left: 10px;
         bottom: 10px;
         background: rgba(0, 0, 0, 0.4);
