--- a/site/public/add.html
+++ b/site/public/add.html
@@ -22,10 +22,14 @@
         bottom: 10px;
         background: rgba(0, 0, 0, 0.4);
         padding: 0 10px;
+        -webkit-border-radius: 10px;
+        -moz-border-radius: 10px;
+        border-radius: 10px;
       }
 
       legend {
         color: white !important;
+        text-shadow: -1px -1px #333;
       }
 
     </style>
