--- a/site/public/add.html
+++ b/site/public/add.html
@@ -89,6 +89,7 @@
           <input type="hidden" id="lon"/>
 
           <button type="submit" class="pure-button pure-button-primary">Create</button>
+          <a href="http://punadv.herokuapp.com" class="pure-button button-error">Cancel</a>
         </fieldset>
       </form>
     </div>
