Add evil buttons.

--- a/site/public/add.html
+++ b/site/public/add.html
@@ -32,6 +32,10 @@
         text-shadow: -1px -1px #333;
       }
 
+      .button-error {
+        background: rgb(202, 60, 60); /* this is a maroon */
+      }
+
     </style>
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBetWit_oBeGVWVCTCflsH0QytUwoDg-i8&sensor=false">
     </script>
