--- a/site/public/add.html
+++ b/site/public/add.html
@@ -36,6 +36,9 @@
         background: rgb(202, 60, 60); /* this is a maroon */
       }
 
+      .pure-button {
+        padding-left: 5px;
+      }
     </style>
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBetWit_oBeGVWVCTCflsH0QytUwoDg-i8&sensor=false">
     </script>
