--- a/site/public/add.html
+++ b/site/public/add.html
@@ -86,7 +86,7 @@
     <div id="nav">
       <form class="pure-form" id="newNote">
         <fieldset>
-          <legend>Add a new note! Click on the map to select the location.</legend>
+          <legend><h1>Add a new note! Click on the map to select the location.<h1></legend>
 
           <input type="text" placeholder="Title" id="tit"/>
           <input type="text" placeholder="Note" id="msg"/>
