--- a/site/public/add.html
+++ b/site/public/add.html
@@ -39,11 +39,6 @@
       .pure-button {
         padding-left: 5px;
       }
-
-      h4 {
-        padding-top: 5px;
-        padding-bottom: 5px;
-      }
     </style>
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBetWit_oBeGVWVCTCflsH0QytUwoDg-i8&sensor=false">
     </script>
@@ -91,7 +86,7 @@
     <div id="nav">
       <form class="pure-form" id="newNote">
         <fieldset>
-          <legend><h4>Add a new note! Click on the map to select the location.</h4></legend>
+          <legend>Add a new note! Click on the map to select the location.</legend>
 
           <input type="text" placeholder="Title" id="tit"/>
           <input type="text" placeholder="Note" id="msg"/>
