--- a/site/public/index.html
+++ b/site/public/index.html
@@ -98,7 +98,7 @@
   <body>
     <div id="map-canvas"></div>
     <div class="pure-menu pure-menu-open" id="nav">
-      <a class="pure-menu-heading">Placement</a>
+      <a class="pure-menu-heading">Adventure!</a>
 
       <ul>
           <li><a href="add.html">Add Note</a></li>
