--- a/site/public/index.html
+++ b/site/public/index.html
@@ -67,6 +67,7 @@
               '</div>'+
               '<h1 id="firstHeading" class="firstHeading">' + note.title + '</h1>'+
               '<h2 class="names">From: ' + note.sender + '</h2>'+ rec +
+              '<h2 class="names">On: ' + new Date(Number(note.created_at_in_secs) * 1000).format() +
               '<div id="bodyContent">'+
                 '<p>' + note.note + '</p>'+ pic + audio +
               '</div>'+
